<resources>
    <string name="app_name">FavDish</string>
    <string name="title_all_dishes">All Dishes</string>
    <string name="title_favourite_dish">Favourite Dish</string>
    <string name="title_random_dish">Random Dish</string>
    <string name="splash_title">Fav Dish</string>
    <string name="add_dish">Add Dish</string>
    <string name="add">Add</string>
    <string name="add_dish_lbl">ADD DISH</string>
    <string name="image_content_desc">Image of a dish</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_direction_to_cook">Direction To Cook</string>
    <string name="lbl_cooking_time">Cooking Time</string>
    <string name="camera">Camera</string>
    <string name="image_selection">Image Selection</string>
    <string name="no_dishes_added_yet">No dishes added yet</string>
    <string name="dish_title">Dish Title</string>
    <string name="this_is_fav_dish_fragment">This is Fav Dish Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dish_details">Dish Details</string>
    <string name="dish_details_title">Dish Title:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="cooking_time">Cooking Time:</string>
    <string name="action_edit_dish">Edit Dish</string>
    <string name="action_delete_dish">Delete Dish</string>
    <string name="msg_dish_already_added">You have already added dish to your favourites</string>
    <string name="please_wait">Please Wait</string>
    <string name="share">Share</string>

    <string name="notification_title">Checkout new dish recipes</string>
    <string name="notification_subtitle">Tap for more details</string>
</resources>