<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_dishes">

    <fragment
        android:id="@+id/navigation_all_dishes"
        android:name="com.example.favdish.view.fragments.AllDishesFragment"
        android:label="@string/title_all_dishes"
        tools:layout="@layout/fragment_all_dishes" >
        <action
            android:id="@+id/action_navigation_all_dishes_to_dishDetailsFragment"
            app:destination="@id/dishDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_random_dish"
        android:name="com.example.favdish.view.fragments.RandomDishFragment"
        android:label="@string/title_random_dish"
        tools:layout="@layout/fragment_random_dish" />
    <fragment
        android:id="@+id/navigation_favourite_dish"
        android:name="com.example.favdish.view.fragments.FavouriteDishFragment"
        android:label="@string/title_favourite_dish"
        tools:layout="@layout/fragment_favourite_dish" />
    <fragment
        android:id="@+id/dishDetailsFragment"
        android:name="com.example.favdish.view.fragments.DishDetailsFragment"
        android:label="@string/dish_details"
        tools:layout="@layout/fragment_dish_details">
        <argument
            android:name="@string/dish_details"
            app:argType="com.example.favdish.model.entities.FavDish"/>

    </fragment>


</navigation>